# aniplot

./: LICENSE  README.md  pyproject.toml  setup.py
aniplot/: __init__.py  bar.py  base.py  dototated_line.py  image.py  line.py
